--- a/src/app/poc/users/users.component.styl
+++ b/src/app/poc/users/users.component.styl
@@ -1,6 +1,9 @@
-.table
-    width: 50%;
-    border: 2px solid darkgray;
-    > thead
-        > tr
-            background: lightblue
+.user-wrapper
+    margin: 20px;
+    width: 77%;
+    > table 
+        width: 50%;
+        border: 2px solid darkgray;
+        > thead
+            > tr
+                background: lightblue          
