Completed Drag and Drop Functionality using draggable events

--- a/src/app/poc3/left/left.component.html
+++ b/src/app/poc3/left/left.component.html
@@ -1,1 +1,13 @@
-<p>left works!</p>
+<div class="left-drag-wrapper">
+    <h2> Drag Items from the list !!!</h2>
+    <button id="div1" draggable="true" (dragstart)="drag($event)">Button1</button>
+    <textarea id="div2" draggable="true" (dragstart)="drag($event)">Text Area</textarea>
+    <div id="div3" draggable="true" (dragstart)="drag($event)">Div</div>
+    <a id="div4" draggable="true" (dragstart)="drag($event)">Button4</a>
+    <button id="div5" draggable="true" (dragstart)="drag($event)">Button5</button>
+    <div id="div6" draggable="true" (dragstart)="drag($event)">Div1</div>
+    <div id="div7" draggable="true" (dragstart)="drag($event)">Div2</div>
+    <div id="div8" draggable="true" (dragstart)="drag($event)">Div3</div>
+    <div id="div9" draggable="true" (dragstart)="drag($event)">Div4</div>
+    <div id="div10" draggable="true" (dragstart)="drag($event)">Div5</div>
+</div>
