--- a/src/app/poc3/poc3.component.html
+++ b/src/app/poc3/poc3.component.html
@@ -1,1 +1,5 @@
-<div>WIP</div>
+<div class="drag-and-drop">
+    <ng-template appRightDrop></ng-template>
+
+    <ng-template appLeftDrag></ng-template>
+</div>
